# sc-language-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md
editors/vscode/: README.md  extension.js  language-configuration.json  package-lock.json  package.json
editors/vscode/icons/: safec-icon-theme.json
editors/vscode/syntaxes/: safec.tmLanguage.json
include/: Analysis.h  Protocol.h  Server.h  Transport.h
src/: Analysis.cpp  CHeaderImporterStub.cpp  Server.cpp  Transport.cpp  main.cpp
